--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -8,9 +8,22 @@
 </head>
 <body>
     
+<header>
+    <h1>Quote From Kanye WEST </h1>
+</header>
+
+    <main>
+        <section>
+            <blockquote  id="quote">
 
 
 
+            </blockquote>
+        </section>
+    </main>
+
+    <button onclick="loadQuote()">Quote</button>
+              
     <script src="SCRIPT.JS"></script>
 </body>
 </html>
