--- a/RandomUser.html
+++ b/RandomUser.html
@@ -5,10 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        .user{
+            margin: 10px;
+            padding: 10px;
+            color: blueviolet;
+            background-color: greenyellow;
+        }
+    </style>
 </head>
 <body>
 
-     <button onclick="randomUser()">cLICK</button>
+    <header>
+        <h1>International Lover</h1>
+
+        <main>
+            <h3>All Lover HERE</h3>
+            <div id="user-containers">
+
+
+
+            </div>
+        </main>
+
+        <button onclick="randomUser()">Click</button>
+    </header>
 
     <script src="RandomUser.js"></script>
 </body>
