--- a/Country.html
+++ b/Country.html
@@ -5,16 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Country</title>
+
+    <style>
+
+     .country{
+        background-color: green;
+        color: greenyellow;
+
+     }
+    </style>
 </head>
 <body>
     
-    <header>
+    <header> 
         <h1>All  Countries here</h1>
 
-         <div class="country">
-
+         <div id="country">
+              <h1>mkmk</h1>
 
          </div>
+
+         <button onclick='loadCoutry()'>Country </button>
 
     </header>
 
