--- a/Country.html
+++ b/Country.html
@@ -12,8 +12,14 @@
     <header> 
         <h1>All  Countries here</h1>
 
+
+        <div id="details">
+                 
+
+
+        </div>
          <div id="country">
-              <h1>mkmk</h1>
+             
 
          </div>
 
